refactor(test): isolate test data and remove shared seeds